--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,8 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './mainstyle';
+@import './formstyle';
+@import './cardstyle';
+@import './buttonload';
+// @import './example';
